llvm/dev/skct.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/skct.llvm:36:1: error: expected instruction opcode
ifright2:                                         ; preds = %ifright
^
